error handling interlude

--- a/website/tutorial/basic/08-authentication.mdx
+++ b/website/tutorial/basic/08-authentication.mdx
@@ -564,9 +564,10 @@ In `src/schema.ts`, add a field resolvers for `User.links` to your `resolvers` v
 // ... other imports ...
 import { Link, User } from '@prisma/client'
 
-// ... other resolvers ...
 const resolvers = {
+  // ... other resolver maps ...
   User: {
+    // ... other User object type field resolver functions ...
     links: (parent: User, args: {}, context: GraphQLContext) =>
       context.prisma.user.findUnique({ where: { id: parent.id } }).links(),
   },
