--- a/website/tutorial/basic/11-filtering-and-pagination.mdx
+++ b/website/tutorial/basic/11-filtering-and-pagination.mdx
@@ -5,7 +5,7 @@ sidebar_label: Filtering and Pagination
 ---
 
 This is an exciting section of the tutorial where you'll implement some key features of many robust APIs! The goal is to
-allow clients to constrain the list of `Link` elements returned by the `feed` query by providing filtering and
+allow clients to constrain the list of `Link` elements returned by the `Query.feed` field by providing filtering and
 pagination parameters.
 
 Let's jump in! 🚀
@@ -14,17 +14,17 @@ Let's jump in! 🚀
 
 By using `PrismaClient`, you'll be able to implement filtering capabilities to your API without too much effort.
 Similarly to the previous chapters, the heavy-lifting of query resolution will be performed by Prisma. All you need to
-do is forward incoming queries to it.
+do is pass the correct parameters within the field resolvers.
 
-The first step is to think about the filters you want to expose through your API. In your case, the `feed` query in your
+The first step is to think about the filters you want to expose through your API. In your case, the `Query.feed` field in your
 API will accept a _filter string_. The query then should only return the `Link` elements where the `url` _or_ the
 `description` _contain_ that filter string.
 
 <Instruction>
 
-Go ahead and add the `filter` string to the `feed` query in your application schema (under `src/schema.graphql`):
+Go ahead and add the `filter` string to the `feed` query in your application schema (under `src/schema.ts`):
 
-```graphql{3}(path="hackernews-node-ts/src/schema.graphql)
+```graphql
 type Query {
   info: String!
   feed(filter: String): [Link!]!
@@ -68,13 +68,13 @@ const resolvers = {
 </Instruction>
 
 If no `filter` string is provided, then the `where` object will be just an empty object and no filtering conditions will
-be applied by Prisma Client when it returns the response for the `links` query.
+be applied by Prisma Client when it returns the response for the `Query.links` field.
 
 In cases where there is a `filter` carried by the incoming `args`, you're constructing a `where` object that expresses
 our two filter conditions from above. This `where` argument is used by Prisma to filter out those `Link` elements that
 don't adhere to the specified conditions.
 
-That's it for the filtering functionality! Go ahead and test your filter API - here's a sample query you can use:
+That's it for the filtering functionality! Go ahead and test your filter API - here's a sample query operation you can use:
 
 ```graphql
 query {
@@ -136,9 +136,9 @@ Now, adjust the resolver implementation:
 
 <Instruction>
 
-And now adjust the implementation of the `feed` resolver:
+And now adjust the implementation of the `Query.feed` resolver function:
 
-```typescript{7,19-24}(path="hackernews-node-ts/src/schema.ts)
+```typescrip
 const resolvers = {
   // ... other resolvers ...
   Query: {
@@ -198,7 +198,7 @@ from the Prisma API in the API of your GraphQL server. You can do so by creating
 
 Add the following enum definition to your GraphQL schema:
 
-```graphql(path="hackernews-node-ts/src/schema.graphql)
+```graphql
 input LinkOrderByInput {
   description: Sort
   url: Sort
@@ -217,7 +217,7 @@ This represents the various ways that the list of `Link` elements can be sorted 
 
 <Instruction>
 
-Now, adjust the `feed` query again to include the `orderBy` argument:
+Now, adjust the `Query.feed` field SDL again to include the `orderBy` argument:
 
 ```graphql
 type Query {
@@ -294,98 +294,3 @@ query {
   }
 }
 ```
-
-### Returning the total amount of `Link` elements
-
-The last thing you're going to implement for your Hacker News API is the information _how many_ `Link` elements are
-currently stored in the database. To do so, you're going to refactor the `feed` query a bit and create a new type to be
-returned by your API: `Feed`.
-
-<Instruction>
-
-Add the new `Feed` type to your GraphQL schema. Then also adjust the return type of the `feed` query accordingly:
-
-```graphql{3,7-10}(path="hackernews-node-ts/src/schema.graphql)
-type Query {
-  info: String!
-  feed(filter: String, skip: Int, take: Int, orderBy: LinkOrderByInput): Feed!
-  me: User!
-}
-
-type Feed {
-  links: [Link!]!
-  count: Int!
-}
-```
-
-</Instruction>
-
-<Instruction>
-
-Now, go ahead and adjust the `feed` resolver again:
-
-```typescript
-import { Link, User, Prisma } from '@prisma/client'
-
-const resolvers = {
-  // ... other resolvers ...
-  Query: {
-    // ... other resolvers ...
-    feed: async (
-      parent: unknown,
-      args: {
-        filter?: string
-        skip?: number
-        take?: number
-        orderBy?: {
-          description?: Prisma.SortOrder
-          url?: Prisma.SortOrder
-          createdAt?: Prisma.SortOrder
-        }
-      },
-      context: GraphQLContext,
-    ) => {
-      const where = args.filter
-        ? {
-            OR: [
-              { description: { contains: args.filter } },
-              { url: { contains: args.filter } },
-            ],
-          }
-        : {}
-
-      const totalCount = await context.prisma.link.count({ where })
-      const links = await context.prisma.link.findMany({
-        where,
-        skip: args.skip,
-        take: args.take,
-        orderBy: args.orderBy,
-      })
-
-      return {
-        count: totalCount,
-        links,
-      }
-    },
-  },
-}
-```
-
-</Instruction>
-
-You can now test the revamped `feed` query as follows:
-
-```graphql
-query {
-  feed {
-    count
-    links {
-      id
-      description
-      url
-    }
-  }
-}
-```
-
-![test the revamped feed query](https://i.imgur.com/cG95KH0.png)
